# tss-eddsa

./: .gitignore  AGENT.md  README.md  package.json
.github/workflows/: eddsa-bindings.yml
apps/eddsa-bindings/: README.md  index.d.ts  package.json
apps/eddsa-client/: README.md  eslint.config.mjs  package.json  tsconfig.json
apps/eddsa-client/src/: index.ts
apps/eddsa-client/src/client/: mpc_client.ts
apps/eddsa-client/src/services/: coordinator_service.ts  mpc_service.ts
apps/eddsa-client/src/utils/: serialization.ts  validation.ts
apps/eddsa-client/tests/: coordinator_service.test.ts  mpc_integration.test.ts  mpc_service.test.ts
apps/eddsa-core/: Cargo.toml  README.md
apps/eddsa-examples/: README.md  complete_mpc_protocol.ts  package.json  solana_transaction_poc.ts  tsconfig.json
apps/eddsa-examples/examples/: complete_mpc_protocol.ts  solana_transaction_poc.ts
apps/mpc-eddsa/: .gitignore  README.md  jest.config.js  package.json  tsconfig.json
apps/mpc-eddsa/examples/: README.md  complete_mpc_protocol.ts  solana_transaction_poc.ts
apps/mpc-eddsa/node-bindings/: Cargo.toml  README.md  index.d.ts  index.js  package.json
apps/mpc-eddsa/node-bindings/src/: lib.rs
apps/mpc-eddsa/src/: index.ts
apps/mpc-eddsa/src/client/: mpc_client.ts
apps/mpc-eddsa/src/errors/: index.ts
apps/mpc-eddsa/src/services/: coordinator_service.ts  mpc_service.ts
apps/mpc-eddsa/src/types/: index.ts
apps/mpc-eddsa/src/utils/: serialization.ts  validation.ts
apps/mpc-eddsa/tests/: coordinator_service.test.ts  mpc_integration.test.ts  mpc_service.test.ts
