[package]
name = "multi-party-eddsa"
version = "0.3.0"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.8"
sha2 = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
curv = { package = "curv-kzen", version = "0.9", default-features = false, features = ["no-gmp"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
curv = { package = "curv-kzen", version = "0.9", default-features = false, features = ["rust-gmp-kzen"] }

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand_xoshiro = "0.6.0"
itertools = "0.10"
