[package]
name = "multi-party-eddsa-node"
version = "0.3.0"
edition = "2021"
authors = ["Multi-party EdDSA Contributors"]

[lib]
crate-type = ["cdylib"]

[dependencies]
multi-party-eddsa = { path = ".." }
curv = { package = "curv-kzen", version = "0.9", default-features = false }
napi = { version = "2", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
napi-build = "2"

